--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
     grid-template-columns: 1.6fr 1fr;
-    grid-template-rows: 90px 90px 600px 90px;
+    grid-template-rows: 75px 45px 700px 50px;
     border: 2px solid black;
 }
 
@@ -9,6 +9,8 @@
     grid-column: 1/3;
     grid-row: 1/2;
     border: 2px solid black;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .navigation {
@@ -39,8 +41,42 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-}
+    overflow: hidden;
+    background-color: #333;
+  }
   
-li {
-    display: inline;
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
+
+  h2 {
+    font-size: 22px;
+    color: rgb(41, 41, 41);
+    padding-left: 16px;
+    line-height: 40px;
+  }
+
+  body, html {
+    background-color: rgb(209, 194, 155);
+  }
+
+  .active {
+    background-color: green;
+  }
+
+ h3 {
+    padding-left: 35px;
+    
 }
