--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@
     grid-column: 1/3;
     grid-row: 4/5;
     border: 2px solid black;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 8px;
 }
 
 ul {
@@ -80,7 +83,7 @@ ul {
 
  h3 {
     padding-left: 35px;
-    font-size: 20px;
+    font-size: 19px;
 }
 
 a:hover {
