--- a/style.css
+++ b/style.css
@@ -1,32 +1,32 @@
 .container {
     display: grid;
-    grid-template-columns: 1.6fr 1fr;
+    grid-template-columns: 0.4fr 1.6fr 1.3fr;
     grid-template-rows: 75px 45px 750px 62px;
     border: 2px solid black;
 }
 
 .title {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 1/2;
     border: 2px solid black;
-    text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
 }
 
 .navigation {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 2/3;
     border: 2px solid black;
 }
 
 .leftbox {
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 3/4;
     border: 2px solid black;
 }
 
 .rightbox {
-    grid-column: 2/3;
+    grid-column: 3/4;
     grid-row: 3/4;
     border: 2px solid black;
     text-align: center;
@@ -34,12 +34,18 @@
 }
 
 .footer {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 4/5;
     border: 2px solid black;
     text-align: center;
     font-size: 30px;
     padding-top: 8px;
+}
+
+.logo {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    padding-left: 12px;
 }
 
 ul {
